Replace APPLICATION_BASE_PATH with $rootDir and friends

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 *~
 
-output/resume-pdf.html
+/resume/
+/output/
 assets/templates/default.html
-output/resume.pdf
-output/resume.html
-resume/craig.md
-output/craig-pdf.html
-output/craig.html
-output/craig.pdf
